fix: :lipstick: font color hover was too light

--- a/src/style.css
+++ b/src/style.css
@@ -58,3 +58,7 @@ input::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+
+:root {
+  --ck-color-list-button-hover-background: grey !important;
+}
